WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47898
[Qt] getImageData returns wrong data for non-0,0 source offset
https://bugs.webkit.org/show_bug.cgi?id=47898
Summary
[Qt] getImageData returns wrong data for non-0,0 source offset
Andreas Kling
Reported
2010-10-19 04:42:46 PDT
Our getImageData() is busted for any sourceRect offset that isn't (0,0)
Attachments
Proposed patch
(4.54 KB, patch)
2010-10-19 04:46 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2010-10-19 04:46:43 PDT
Created
attachment 71153
[details]
Proposed patch
Andreas Kling
Comment 2
2010-10-19 05:46:10 PDT
Comment on
attachment 71153
[details]
Proposed patch Clearing flags on attachment: 71153 Committed
r70050
: <
http://trac.webkit.org/changeset/70050
>
Andreas Kling
Comment 3
2010-10-19 05:46:20 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 4
2010-10-19 06:31:34 PDT
http://trac.webkit.org/changeset/70050
might have broken Leopard Intel Release (Tests) The following tests are not passing: fast/canvas/canvas-getImageData-negative-source.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug