2010-10-19  Andreas Kling  <kling@webkit.org>

Reviewed by Tor Arne Vestbø.

        [Qt] getImageData returns wrong data for non-0,0 source offset
        https://bugs.webkit.org/show_bug.cgi?id=47898

        Test: fast/canvas/canvas-getImageData-negative-source.html

        * platform/graphics/qt/ImageBufferQt.cpp:
        (WebCore::getImageData): Add missing *4's to get correct pixel offset.
2010-10-19  Andreas Kling  <kling@webkit.org>

        Reviewed by Tor Arne Vestbø.

        [Qt] getImageData returns wrong data for non-0,0 source offset
        https://bugs.webkit.org/show_bug.cgi?id=47898

        * fast/canvas/canvas-getImageData-negative-source-expected.txt: Added.
        * fast/canvas/canvas-getImageData-negative-source.html: Added.
        * fast/canvas/script-tests/canvas-getImageData-negative-source.js: Added.


Canonical link: https://commits.webkit.org/60613@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70050 268f45cc-cd09-0410-ab3c-d52691b4dbfc